syntax = "proto3";

package educationCertification;

import "google/protobuf/timestamp.proto";

service EducationCertificationServiceGrpc {
    rpc findEducationCertificationsByCvId(InputCvIdRequest) returns (EducationCertificationsResponse) {}
}

message Cv {
    int32 id = 1;
    string name = 2;
    string gender = 3;
    string nationality = 4;
    string objective = 5;
    string summary = 6;
    bool isDeleted = 7;
    int32 userId = 8;
}

message EducationCertification {
    int32 id = 1;
    string name = 2;
    string time = 3;
    string major = 4;
    bool isDeleted = 5;
    Cv cv = 6;
}

message InputCvIdRequest {
    int32 cvId = 1;
}

message EducationCertificationsResponse {
   repeated EducationCertification data = 1;
}
